[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rosettalink"
version = "0.0.0"
#requires-python = ">=3.10,<3.13"
requires-python = ">=3.10"
description = "RosettaLink"
readme = "README.md"
dependencies = [
    #"pyrosetta>=2025.47",
    "pyrosetta",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
